Products.CMFCore Changelog
==========================

2.2.0 (unreleased)
------------------

- FSObject: Ensure that ZCache invalidations only happens if the 
  filesystem modification time differs from the internally stored
  previous modification time.
  (https://bugs.launchpad.net/zope-cmf/+bug/325246)

- TypeInformation: DCWorkflow instances define a method and a guard 
  for vetoing object creation, but it was never used. Now  
  TypeInformation objects will consult these guard conditions during 
  object creation.
  (https://bugs.launchpad.net/zope-cmf/+bug/308947)

- PortalCatalog: Changed to use a multi-adaptor to allow a pluggable
  IndexableObjectWrapper class.  Objects that implement IIndexableObject
  are not wrapped.  The change will assist in integrating with
  other indexing strategies from third-party packages.

- Events: Changed 'handleContentishEvent' behavior for IObjectCopiedEvent.
  'WorkflowTool.notifyCreated' no longer resets the workflow state, so the
  the event subscriber clears the workflow history instead.

- WorkflowTool: 'notifyCreated' no longer overrides assigned workflow states.

- No longer catch a `NotImplemented` string exception in the MembershipTool
  in deleteMembers.

- Added `__name__` to the FSPythonScript execution scope in addition to
  `__file__`. This makes Python 2.6's warnings module happy.

- Cleaned up / normalized imports:

  o Don't import from Globals;  instead, use real locations.

  o Make other imports use the actual source module, rather than an
    intermediate (e.g., prefer importing 'ClassSecurityInfo' from
    'AccessControl.SecurityInfo' rather than from 'AccessControl').

  o Avoid relative imports, which will break in later versions of Python.

- Added `icon_expr` as a new property to type information. This allows you
  to specify the `content_icon` as an expression and store it. This avoids
  creating the expression on the fly at rendering time.
